<resources>
    <string name="app_name">MovieApp</string>
    <string name="message">Type your message here</string>
    <string name="send">Send</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="popular_movies">Popular movies</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="e_mail">e_mail</string>
    <string name="password">Password</string>
    <string name="poster">poster</string>
    <string name="quit">quit</string>
    <string name="profile_Photo">profilePhoto</string>
    <string name="photo">Photo</string>
    <string name="title">Title</string>
    <string name="n_message">Message</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Show closest cinemas</string>
    <string name="alert_title">Do you want to exit?</string>
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="similar">similar</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="reviews">Reviews</string>
    <string name="movie_app">Welcome to Movie App</string>
</resources>