<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/movieCatalogFragment">

    <fragment
        android:id="@+id/movieCatalogFragment"
        android:name="com.example.mynavigation.presentation.view.fragments.MovieCatalogFragment"
        android:label="@string/movie_catalog"
        tools:layout="@layout/fragment_movie_catalog">
        <action
            android:id="@+id/action_movieCatalogFragment_to_viewPagerFragment2"
            app:destination="@id/viewPagerFragment2" />
    </fragment>
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.example.mynavigation.presentation.view.fragments.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites">

        <action
            android:id="@+id/action_favouritesFragment_to_viewPagerFragment2"
            app:destination="@id/viewPagerFragment2" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mynavigation.presentation.view.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/movieDetail"
        android:name="com.example.mynavigation.presentation.view.fragments.MovieDetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_movie_detail">

    </fragment>
    <fragment
        android:id="@+id/viewPagerFragment2"
        android:name="com.example.mynavigation.presentation.view.fragments.ViewPagerFragment"
        android:label="ViewPagerFragment" >
        <argument
            android:name="movie_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_viewPagerFragment2_self"
            app:destination="@id/viewPagerFragment2" />
    </fragment>
    <fragment
        android:id="@+id/similarMovieFragment"
        android:name="com.example.mynavigation.presentation.view.fragments.SimilarMovieFragment"
        android:label="fragment_similar_movie"
        tools:layout="@layout/fragment_similar_movie" >
    </fragment>
    <fragment
        android:id="@+id/movieReviewFragment"
        android:name="com.example.mynavigation.presentation.view.fragments.MovieReviewFragment"
        android:label="fragment_movie_review"
        tools:layout="@layout/fragment_movie_review" />
</navigation>